--- a/MarkUps-App-Landy/app-landy/style.css
+++ b/MarkUps-App-Landy/app-landy/style.css
@@ -14,11 +14,11 @@ Tags: light, white, single page, multipurpose, one page, custom-colors, Bootstra
 /* Table of Content
 ==================================================
 #BASIC TYPOGRAPHY
-#HEADER	
-#MENU 
+#HEADER
+#MENU
 #FEATURES
 #HOW IT WORKS
-#PRICING TABLE  
+#PRICING TABLE
 #SCREENSHOT
 #DOWNLOAD
 #TESTIMONIAL
@@ -37,7 +37,7 @@ Tags: light, white, single page, multipurpose, one page, custom-colors, Bootstra
 /*--------------------*/
 
 body,html{
-  	overflow-x:hidden;  	
+  	overflow-x:hidden;
 }
 
 body {
@@ -53,9 +53,9 @@ ul{
 	list-style: none;
 }
 
-a{ 
+a{
 	text-decoration: none;
-	color: #2f2f2f;  
+	color: #2f2f2f;
 }
 
 a:focus{
@@ -68,12 +68,12 @@ h1,h2,h3,h4,h5,h6{
 }
 
 h2 {
-	color: #fff;  
+	color: #fff;
 	font-size: 30px;
 	font-weight: 700;
 	line-height: 40px;
 	margin: 0;
-	padding-bottom: 10px;  
+	padding-bottom: 10px;
 }
 
 img{
@@ -89,7 +89,7 @@ img{
   right:0;
   bottom:0;
   background-color:#fff; /* change if the mask should have another color then white */
-  z-index:99999; /* makes sure it stays on top */ 
+  z-index:99999; /* makes sure it stays on top */
 }
 
 #status {
@@ -115,10 +115,10 @@ img{
 }
 
 
-.header-inner{	
+.header-inner{
 	display: inline;
 	position: relative;
-	float: left;	
+	float: left;
 	width: 100%;
 }
 
@@ -173,7 +173,7 @@ img{
 
 
 .menu-area{
-	display: inline;	
+	display: inline;
 }
 
 
@@ -316,7 +316,7 @@ img{
 
 
 .main-nav a:active {
-	background: #182029;	
+	background: #182029;
 }
 
 
@@ -357,7 +357,7 @@ img{
 .title-area {
 	display: inline;
 	float: left;
-	padding: 0 150px;  
+	padding: 0 150px;
 	text-align: center;
 	width: 100%;
 }
@@ -404,7 +404,7 @@ img{
 
 .features-left {
 	display: inline;
-	float: left;  
+	float: left;
 	width: 100%;
 }
 
@@ -422,7 +422,7 @@ img{
 
 
 .features-list li i{
-	background-color: #777;	
+	background-color: #777;
 	border-radius: 50%;
 	color: #fff;
 	display: block;
@@ -455,14 +455,14 @@ img{
 }
 
 
-.features-content h4 { 
+.features-content h4 {
 	font-size: 18px;
 	text-transform: uppercase;
 }
 
 
 .features-content p{
-	font-size: 15px;	
+	font-size: 15px;
 }
 
 
@@ -482,8 +482,8 @@ img{
 
 .features-right{
 	display: inline;
-	float: left;	
-	width: 100%;	
+	float: left;
+	width: 100%;
 }
 
 
@@ -498,6 +498,27 @@ img{
 
 
 /*--------------------*/
+/* HOW IT Insurance-table */
+/*--------------------*/
+
+#black {
+    color: #000000;
+}
+
+#insurance-table {
+	background-attachment: fixed !important;
+	/* background-image: url("assets/images/howit-works-bg.jpg"); */
+  background-color: #000000;
+	background-repeat: repeat;
+	background-size: cover;
+	color: #ffffff;
+	display: inline;
+	float: left;
+	padding: 70px 0;
+	width: 100%;
+}
+
+/*--------------------*/
 /* HOW IT WORKS */
 /*--------------------*/
 
@@ -505,8 +526,8 @@ img{
 #howit-works {
 	background-attachment: fixed !important;
 	background-image: url("assets/images/howit-works-bg.jpg");
-	background-repeat: repeat;  
-	background-size: cover;  
+	background-repeat: repeat;
+	background-size: cover;
 	color: #ffffff;
 	display: inline;
 	float: left;
@@ -582,7 +603,7 @@ img{
 }
 
 
-.single-plan:hover{  
+.single-plan:hover{
   	box-shadow: 0 2px 20px #ccc;
 }
 
@@ -645,7 +666,7 @@ img{
 }
 
 
-.single-plan-content ul li.delete{	
+.single-plan-content ul li.delete{
 	text-decoration: line-through;
 }
 
@@ -728,7 +749,7 @@ img{
 .screenshots-slide li a {
 	border: 5px solid #fff;
 	display: block;
-	float: left;  
+	float: left;
 	position: relative;
 	-webkit-transition: all 0.5s;
 	-o-transition: all 0.5s;
@@ -740,7 +761,7 @@ img{
 	display: none;
 	background-color: rgba(0, 0, 0, 0.8);
 	height: 100%;
-	left: 0; 
+	left: 0;
 	position: absolute;
 	text-align: center;
 	top: 0;
@@ -752,14 +773,14 @@ img{
 }
 
 
-.view-btn {	
+.view-btn {
 	color: #fff;
-	font-size: 35px;  
-	margin-top: 215px;	
+	font-size: 35px;
+	margin-top: 215px;
 }
 
 
-.screenshots-slide li a:hover .view-btn-area{	
+.screenshots-slide li a:hover .view-btn-area{
 	display: block;
 	opacity: 1;
 }
@@ -767,9 +788,9 @@ img{
 
 .screenshots-slide .slick-dots li button {
   background-color: #fff;
-  border: 0 none; 
+  border: 0 none;
   outline: none;
-  height: 4px;  
+  height: 4px;
   padding: 5px;
   width: 20px;
 }
@@ -781,7 +802,7 @@ img{
 
 
 .screenshots-slide .slick-dots {
-  bottom: -60px; 
+  bottom: -60px;
 }
 
 
@@ -1012,7 +1033,7 @@ img{
 }
 
 
-#subscribe .title-area .title::before {  
+#subscribe .title-area .title::before {
   	width: 250px;
 }
 
@@ -1119,7 +1140,7 @@ img{
 
 
 .contact-form .form-control {
-	background-color: rgba(15, 22, 30, 0.8);  
+	background-color: rgba(15, 22, 30, 0.8);
 	color: #ffffff;
 	font-size: 16px;
 	box-shadow: none;
@@ -1144,7 +1165,7 @@ img{
 }
 
 
-.contact-form .form-control:-ms-input-placeholder {  
+.contact-form .form-control:-ms-input-placeholder {
     color: #ffffff;
    	font-size: 16px;
 }
@@ -1304,37 +1325,37 @@ img{
 
 
 @media(max-width:1199px ){
-	.header-bottom {  
-	  margin-top: 50px;  
+	.header-bottom {
+	  margin-top: 50px;
 	}
 	.feature-img {
-	  padding: 0;  
+	  padding: 0;
 	}
 	.features-list li {
-	  padding: 10px 0;  
+	  padding: 10px 0;
 	}
-	.features-list li i { 
-	  top: 0px;  
+	.features-list li i {
+	  top: 0px;
 	}
 	.single-download {
 	  padding: 18px 10px;
 	}
 	#menu-btn {
-	  right: 50px;  
+	  right: 50px;
 	}
 }
 
 
 @media(max-width:991px ){
-	.header-bottom {  
-	  margin-top: 60px;  
+	.header-bottom {
+	  margin-top: 60px;
 	}
 	.header-bottom-right img{
 		width: 100%;
 	}
-	.header-bottom-left h1 { 
+	.header-bottom-left h1 {
 	  font-size: 32px;
-	  line-height: 45px;  
+	  line-height: 45px;
 	}
 	.features-list li {
 	  margin-bottom: 20px;
@@ -1350,34 +1371,34 @@ img{
 	  padding-left: 115px;
 	  padding-right: 0;
 	}
-	.features-left {  
+	.features-left {
 	  margin-bottom: 30px;
 	}
-	.features-right {  
+	.features-right {
 	  margin-top: 30px;
 	}
-	.features-list li i { 
+	.features-list li i {
 	  font-size: 25px;
 	  height: 70px;
-	  line-height: 70px; 
+	  line-height: 70px;
 	  width: 70px;
 	}
 	.title-area {
-	  padding: 0 50px;  
+	  padding: 0 50px;
 	}
-	.single-plan {  
+	.single-plan {
 	  margin-bottom: 25px;
 	}
 	.single-download {
 		margin: 0 8px;
-		padding: 18px 5px; 
+		padding: 18px 5px;
 		width: 30%;
 	}
-	.subcr-form {  
+	.subcr-form {
 	  width: 95%;
 	}
-	.contact-area {  
-	  padding: 0 100px;  
+	.contact-area {
+	  padding: 0 100px;
 	}
 }
 
@@ -1386,20 +1407,20 @@ img{
 	.header-bottom {
 	  margin-top: 0;
 	}
-	.header-bottom-left {  
+	.header-bottom-left {
 	  padding-right: 0;
-	  padding-top: 0;  
+	  padding-top: 0;
 	  margin-top: 10px;
 	}
 	.header-bottom-left h1 {
 	  font-size: 25px;
 	  line-height: 30px;
 	}
-	.header-bottom-left p {  
+	.header-bottom-left p {
 	  margin: 10px 0 0;
 	}
-	.download-btn {  
-	  margin-top: 20px; 
+	.download-btn {
+	  margin-top: 20px;
 	  width: 160px;
 	}
 	.header-bottom-right img {
@@ -1413,7 +1434,7 @@ img{
 	  text-align: center;
 	}
 	.howit-works-video iframe {
-	  display: inline-block;	 
+	  display: inline-block;
 	  margin-left: auto;
 	  width: 90%;
 	}
@@ -1425,21 +1446,21 @@ img{
 	  right: 5px;
 	}
 	.download-icon i {
-	  font-size: 35px; 
+	  font-size: 35px;
 	}
 	.download-icon {
 	  width: 45px;
 	}
-	.download-content p {  
-	  font-size: 13px;  
+	.download-content p {
+	  font-size: 13px;
 	}
-	.download-content span {	 
+	.download-content span {
 	  font-size: 15px;
 	}
 	.contact-area {
 	  padding: 0 50px;
 	}
-	
+
 }
 
 @media(max-width:480px ){
@@ -1450,24 +1471,24 @@ img{
 	.main-nav ul li a {
 	  font-size: 14px;
 	  padding: 8px 35px;
-	}	
-	.header-bottom-right { 
+	}
+	.header-bottom-right {
 	  margin-top: 30px;
 	}
-	.header-bottom-left {  
+	.header-bottom-left {
 	  padding-right: 0;
-	  padding-top: 0;  
+	  padding-top: 0;
 	  margin-top: 10px;
 	}
 	.header-bottom-left h1 {
 	  font-size: 25px;
 	  line-height: 30px;
 	}
-	.header-bottom-left p {  
+	.header-bottom-left p {
 	  margin: 10px 0 0;
 	}
-	.download-btn {  
-	  margin-top: 20px; 
+	.download-btn {
+	  margin-top: 20px;
 	  width: 160px;
 	}
 	.header-bottom-right img {
@@ -1481,7 +1502,7 @@ img{
 	  text-align: center;
 	}
 	.howit-works-video iframe {
-	  display: inline-block;	 
+	  display: inline-block;
 	  margin-left: auto;
 	  width: 90%;
 	}
@@ -1493,39 +1514,39 @@ img{
 	  right: 5px;
 	}
 	.single-download {
-	  margin: 0 8px 20px;	 
+	  margin: 0 8px 20px;
 	  width: 100%;
 	}
 	.download-icon {
 	  width: 60px;
 	}
 	.download-icon i {
-	  font-size: 40px; 
-	}	
-	.download-content p {  
-	  font-size: 15px;  
+	  font-size: 40px;
 	}
-	.download-content span {	 
+	.download-content p {
+	  font-size: 15px;
+	}
+	.download-content span {
 	  font-size: 18px;
 	}
 	.contact-area {
 	  padding: 0 50px;
 	}
-	.title-area .title {  
-	  font-size: 25px; 
-	  padding-bottom: 10px;  
+	.title-area .title {
+	  font-size: 25px;
+	  padding-bottom: 10px;
 	}
 	.title-area .title::before {
 	  top: 50px;
 	}
 	.view-btn {
 	  margin-right: 25%;
-	}	
+	}
 
 }
 
 
-@media(max-width:360px ){	
+@media(max-width:360px ){
 	.header-bottom-left h1 {
 	  font-size: 20px;
 	  line-height: 25px;
@@ -1565,16 +1586,16 @@ img{
 	  padding-left: 95px;
 	}
 	.features-list-right .features-content {
-	  padding-left: 95px;	  
+	  padding-left: 95px;
 	}
 	.feature-img img {
 	  width: 85%;
 	}
-	.download-app-content { 
+	.download-app-content {
 	  width: 95%;
 	}
 	.single-download {
-	  padding: 18px 30px;	 
+	  padding: 18px 30px;
 	}
 	.testimonial-slider {
 	  padding: 40px 10px;
@@ -1599,8 +1620,8 @@ img{
 	  padding-right: 105px;
 	}
 	.subcr-form .subcr-btn {
-	  font-size: 15px; 
-	  height: 55px;  
+	  font-size: 15px;
+	  height: 55px;
 	  width: 100px;
 	}
 	.contact-area {
@@ -1620,9 +1641,9 @@ img{
 	.single-plan-content ul li {
 		font-size: 15px;
 	}
-	.single-plan-bottom .signup-btn {  
-	  font-size: 16px;  
-	  padding: 13px 35px;  
+	.single-plan-bottom .signup-btn {
+	  font-size: 16px;
+	  padding: 13px 35px;
 	}
 	.footer-text p {
 	  font-size: 14px;
@@ -1630,21 +1651,21 @@ img{
 	.view-btn {
 	  margin-right: 35%;
 	}
-	.error-area {  
-	  padding: 100px 0;  
+	.error-area {
+	  padding: 100px 0;
 	}
-	.error-group h1 { 
-	  font-size: 65px;	 
+	.error-group h1 {
+	  font-size: 65px;
 	}
-	.error-group h2 {  
+	.error-group h2 {
 	  font-size: 55px;
-	  line-height: 50px;  
+	  line-height: 50px;
 	}
 
 }
 
 
 @media(max-width:320px ){
-	
-	
+
+
 }
